--- a/shop.css
+++ b/shop.css
@@ -44,6 +44,7 @@ select{
     height: 40px;
     width: 300px;
     border-radius: 5px;
+    margin-bottom: 5px;
 }
 .topflex{
 display: flex;
@@ -72,12 +73,18 @@ color: rgb(151, 145, 145);
 }
 .productcont{
     width: 250px;
-    height: 500px;
+    height: 515px;
     text-align: center;
     
     display: grid;
     justify-content: baseline;
     align-items: center;
+    font-size: 17px;
+    font-family: Montserrat Medium,sans-serif;
+    color: rgb(161, 150, 150);
+    line-height: 10px;
+    font-style: italic;
+    text-decoration: none;
 }
 .productcont>img{
     width: 90%;
@@ -96,4 +103,32 @@ color: rgb(151, 145, 145);
     font-weight: bold;
     border: none;
    
+}
+.divout{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2px;
+    
+}
+.quantity{
+    width: 70px;
+    height: 26px;
+    border: 1px solid rgb(12, 211, 211);
+    background-color: transparent;
+}
+.divin1{
+    display: flex;
+}
+.divin1>button{
+    height: 30px;
+    border: 1px solid rgb(12, 211, 211);
+    background-color: transparent;
+}
+.divin2>button{
+    height: 30px;
+    border: 1px solid rgb(12, 211, 211);
+    background-color: transparent;
+    color:#12284c ;
+    font-weight: bold;
 }
