--- a/makeupshop.css
+++ b/makeupshop.css
@@ -4,7 +4,7 @@
     gap:5px;
     margin: 5px;
     margin-right: 5px;
- 
+
  }
  
  #smallpic{
@@ -113,7 +113,7 @@
  
  .bottomedesc{
      width: 700px;
-     height: 250px;
+     height: auto;
      margin: auto;
  
  }
