--- a/skincareshop.css
+++ b/skincareshop.css
@@ -1,93 +1,106 @@
-#threecol{
-   display: grid;
-   grid-template-columns: 10% 40% 45%; 
-   gap:5px;
-   margin: 5px;
-   margin-right: 5px;
+#threecol {
+    display: grid;
+    grid-template-columns: 10% 40% 45%;
+    gap: 5px;
+    margin: 5px;
+    margin-right: 5px;
 
 }
 
-#smallpic{
+#smallpic {
     width: 100px;
     height: 100px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin-top: 20px;
 }
-#smallpic>img{
-   width: 100%;
+
+#smallpic>img {
+    width: 100%;
     display: grid;
     justify-content: center;
     align-items: center;
 }
-#bigpic{
-width: 500px;
-height: 500px;
-display: grid;
-justify-content: center;
-align-items: center;
+
+#bigpic {
+    width: 500px;
+    height: 500px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
 
 }
-#bigpic>img{
+
+#bigpic>img {
     width: 100%;
 }
-#info{
-    
-    font-family: Montserrat Semi Bold,sans-serif;
-  
+
+#info {
+
+    font-family: Montserrat Semi Bold, sans-serif;
+
 }
-#info>p:nth-child(1){
+
+#info>p:nth-child(1) {
     font-size: 19px;
     color: rgb(63, 60, 60);
     line-height: 0px;
 }
-#info>p:nth-child(2){
+
+#info>p:nth-child(2) {
     font-size: 30px;
     line-height: 1px;
     color: rgb(105, 98, 98);
 }
-#info>p:nth-child(3){
+
+#info>p:nth-child(3) {
     font-size: 30px;
 
     color: rgb(63, 60, 60);
     line-height: 15px;
 
 }
-#info>p:nth-child(4){
+
+#info>p:nth-child(4) {
     font-size: 10px;
     line-height: 0px;
     font-weight: bold;
-     font-style: italic;
-     color: rgb(105, 98, 98);
- 
-  
+    font-style: italic;
+    color: rgb(105, 98, 98);
+
+
 
 }
-p+h5{
+
+p+h5 {
     color: rgb(80, 76, 76);
-    
+
 }
-h5+h4{
+
+h5+h4 {
     margin-top: 30px;
     color: #817d7d;
 }
-.addtocarbtn{
-   
+
+.addtocarbtn {
+
     color: #fff;
-    
-   
+
+
     font-size: 14px;
     font-weight: bold;
     border: none;
-   
-    
-  
+
+
+
 }
-span{
+
+span {
     font-size: 14px;
     margin-bottom: 20px;
 }
-.btnprice{
- 
+
+.btnprice {
+
     width: 400px;
     height: 40px;
     background-color: #12284c;
@@ -95,42 +108,58 @@ span{
     height: 50px;
     justify-content: space-between;
     align-items: center;
-  border: none;
-  cursor: pointer;
-  padding: 5px;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
 }
-.btnprice>p{
+
+.movetocartbtn {
+    margin-top: 20px;
+    background-color: #12284c;
+    color: white;
+    border: 0px;
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.btnprice>p {
     display: grid;
-align-items: center;
-color: #fff;
-font-size: 14px;
-font-weight: bold;
-border: none;
+    align-items: center;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    border: none;
 
 
 
 }
 
-.bottomedesc{
+.bottomedesc {
     width: 700px;
     height: 250px;
     margin: auto;
 
 }
-.bottomedesc>h1{
+
+.bottomedesc>h1 {
     color: gray;
 }
-.bottomedesc>h1+p{
+
+.bottomedesc>h1+p {
     color: #817d7d;
     font-size: 20px;
 }
-.imgflex{
+
+.imgflex {
     display: flex;
     justify-content: space-evenly;
 }
-#moreimg>img{
+
+#moreimg>img {
     margin: 5px;
 }
+
 /* #gridout1{
     display: grid;
     grid-template-columns: 25% 75%;
