--- a/navbar.css
+++ b/navbar.css
@@ -3,6 +3,8 @@ padding: 0;
 font-family: Montserrat Regular,sans-serif;
 }
 
+
+
 #upper{
     display: flex;
     justify-content: space-between;
@@ -50,6 +52,7 @@ margin: 20px 0px 0px 120px;
 #middle ul li:hover{
     color: orange;
     background-color: white;
+    z-index: 10;
 }
 
 #middle ul li a{
@@ -86,7 +89,7 @@ margin: 20px 0px 0px 120px;
 }
 
 #middle ul li ul li{
-   width: 1000px;
+   width: 400px;
    padding: 5px;
    border-radius: 0px 0px 4px 4px;
 }
@@ -96,14 +99,21 @@ margin: 20px 0px 0px 120px;
     padding: 8px 14px;
     background-color: orange;
     color: white;
+    z-index: 10;
 
 }
 #bottom{
     text-align: center;
     background-color: rgb(215,234,242);
     padding: 7px;
+    z-index: 1;
 }
 
+
+#main_body>div:nth-child(2),#main_body>div:nth-child(5),#main_body>div:nth-child(8){
+    text-align: center;
+    font-size: 30px;
+}
 #glowtime,#bleu{
     margin-top: 10px;
     text-align: center;
@@ -151,6 +161,10 @@ font-weight: lighter;
    
 
 }
+#slider1 img{
+    width: 100vw;
+}
+
 #haircare div h3, #bleu_product div h3{
     text-decoration: underline;
     padding: 20px;
@@ -216,3 +230,84 @@ font-weight: lighter;
 }
 
 
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+.carousel-container {
+  width: 1280px;
+  margin: 20px auto;
+  min-height: 200px;
+  position: relative;
+}
+.carousel-inner {
+  overflow: hidden;
+}
+.carousel-container .track {
+  display: flex;
+  transition: transform 0.3s;
+}
+.image>img{
+    width: 100px;
+}
+.card-container {
+  width: 259px;
+  flex-shrink: 0;
+  height: 450px;
+  padding-right: 15px;
+  box-sizing: border-box;
+}
+.card-container .card {
+  
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+.card-container .card > * {
+  flex: 1;
+}
+.card-container .card .img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+}
+.card-container .card .info {
+  flex-grow: 0;
+  flex-basis: 30px;
+  padding: 10px;
+  box-sizing: border-box;
+  /* color: #fff;
+  background: #333; */
+}
+.nav button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #666;
+  cursor: pointer;
+  outline: none;
+}
+.nav .prev {
+  left: -20px;
+}
+.nav .next {
+  right: -20px;
+}
+
+
+#image1{
+    width: 170px
+}
+.info p,.info h4{
+    margin: 0px;
+
+}
