signup/login navbar and footer added done

--- a/navbar.css
+++ b/navbar.css
@@ -34,6 +34,11 @@ margin: 20px 0px 0px 120px;
 }
 #right i{
     gap: 10px;
+   
+}
+#right i a{
+    text-decoration: none;
+    color: black;
 }
 
 
