--- a/navbar1.css
+++ b/navbar1.css
@@ -30,7 +30,11 @@
     #right i{
         gap: 10px;
     }
-    
+    #right i a{
+    text-decoration: none;
+    color: black;
+}
+ 
     
     #middle{
         display: flex;
@@ -47,12 +51,14 @@
     #middle ul li:hover{
         color: orange;
         background-color: white;
+         z-index: 10;
     }
     
     #middle ul li a{
         display: block;
         color: #222;
         text-decoration: none;
+
     
     }
     
@@ -80,6 +86,7 @@
     #middle ul li ul li a{
         padding: 8px 14px;
         border-radius: 5px;
+       
     }
     
     #middle ul li ul li{
@@ -93,7 +100,7 @@
         padding: 8px 14px;
         background-color: orange;
         color: white;
-    
+     z-index: 10;
     }
     #bottom{
         text-align: center;
